--- a/app/src/main/res/layout/activity_terms.xml
+++ b/app/src/main/res/layout/activity_terms.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".OpenActivity"
-    android:background="@color/LightBlue">
-
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:gravity="center"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="0dp">
+    <TextView
+        android:id="@+id/termtext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/terms_conditions" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="411dp"
-        android:layout_height="413dp"
-        app:srcCompat="@drawable/logo_oddjobblue"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="158dp" />
-
+    <Button
+        android:id="@+id/accept_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
