--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="LightBlue">#58CCED</color>
+    <color name="Blue">#3895D3</color>
+    <color name="DarkBlue">#1261A0</color>
+    <color name="colorPrimary">#58CCED</color>
+    <color name="colorPrimaryDark">#1261A0</color>
+    <color name="colorAccent">#435610</color>
 </resources>
