Added firebase auth to build.gradle Declared activities in android manifest Point to the appropriate layout in each activity file.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,7 @@
         android:inputType=""/>
     //Login Button
     <Button
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LOGIN"/>
