--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,27 +5,21 @@
     android:gravity="center"
     android:orientation="vertical">
     //Username
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/username_login"/>
     <EditText
         android:id="@+id/username_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType=""/>
+        android:inputType=""
+        android:hint="Username"/>
     //Password
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/password_login"/>
     <EditText
         android:id="@+id/password_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType=""/>
+        android:inputType="textPassword"
+        android:hint="Password" />
     //Login Button
     <Button
         android:id="@+id/login_button"
