--- a/app/src/main/res/layout/activity_neighbour_edit_profile.xml
+++ b/app/src/main/res/layout/activity_neighbour_edit_profile.xml
@@ -22,12 +22,12 @@
         android:layout_height="wrap_content"
         android:hint="@string/name"/>
     <EditText
-        android:id="@+id/School_Profile"
+        android:id="@+id/Neighbourhood_Profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Neighbourhood"/>
     <EditText
-        android:id="@+id/Grade_Profile"
+        android:id="@+id/Job_Profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Job"/>
