--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType=""
+            android:inputType="textPassword"
             android:hint="@string/password"/>
         <Button
             android:id="@+id/register_button"
