--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayoutt
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    tools:content=".MessageActivity">
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.
-            android:id="@+id/toolbaToolbarr"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
-            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.Action"
-            app:popupTheme="@style/MenuStyle"
-            />
-            <de.hdodendof.circleimageview.CircleImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:id="@+id/profile_image"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/username"
-                android:textSize="18sp"
-                android:layout_marginLeft="25dp"
-                android:textColor="fff"
-                android:textStyle="hold"
-                android:layout_marginStart="25dp"/>
-    </android.support.design.widget.AppBarLayout>
+    android:layout_width="match_parent"/>
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_width="match_parent"-->
+    <!--tools:content=".MessageActivity">-->
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+        <!--<android.support.v7.widget.-->
+            <!--android:id="@+id/toolbaToolbarr"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@color/colorPrimaryDark"-->
+            <!--android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.Action"-->
+            <!--app:popupTheme="@style/MenuStyle"-->
+            <!--/>-->
+            <!--<de.hdodendof.circleimageview.CircleImageView-->
+                <!--android:layout_width="30dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:id="@+id/profile_image"/>-->
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/username"-->
+                <!--android:textSize="18sp"-->
+                <!--android:layout_marginLeft="25dp"-->
+                <!--android:textColor="fff"-->
+                <!--android:textStyle="hold"-->
+                <!--android:layout_marginStart="25dp"/>-->
+    <!--</android.support.design.widget.AppBarLayout>-->
 
-</RelativeLayoutt>
+<!--</RelativeLayoutt>-->
