--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -46,11 +46,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/bio"/>
-        <Button
-            android:id="@+id/editprofile_button"
-            android:layout_width="139dp"
-            android:layout_height="wrap_content"
-            android:text="EDIT" />
+        <!--<Button-->
+            <!--android:id="@+id/editprofile_button"-->
+            <!--android:layout_width="139dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="EDIT" />-->
 
     </LinearLayout>
 
